# ai-publishing-feedback-experimentation

./: .dockerignore  .gcloudignore  .gitignore  .pre-commit-config.yaml  Containerfile  Dockerfile  README.md  cloudbuild.yaml  cloudbuild_ls.yaml  deploy_to_cloudrun.sh  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
.config/: auth_config.yaml  config.json
.streamlit/: config.toml
app/: Containerfile  banner.html  get_metadata_for_filters.py  main.py  style.css  test.py
app/style/: banner.html  button.css  custom.css
collection/: Containerfile  create_collection.py  delete_collection.py  delete_snapshots.py  get_metadata_for_filters.py  main.py  test.py
evaluation/: Containerfile  app.py  create_eval_json.py  output_pkl.py  run_evaluation.py  run_locally.py
notebooks/: create_embeddings_local.ipynb  create_n_labelled_examples.ipynb  create_qdrant_collection.ipynb  create_query_qdrant_collection.ipynb  create_stratified_labelled_feedback_sample.ipynb  eval_test.ipynb  feedback_analysis.ipynb  get_feedback_dimensions.ipynb  human_labelling_feedback.ipynb  openai_label_feedback_data.ipynb
notebooks/labelling_notebooks/: analyse_subtopics.ipynb  analyse_topics.ipynb  check_uuid.sql  extract_bigrams.sql  extract_top_docs.sql  generic_read_table.sql  get_subtopics.sql  labels.sql  sentiment.sql
prompts/: openai_labelling.py  openai_summarise.py
scripts/: create_collection.py  main.py
src/: common.py  sql_queries.py
src/collection/: evaluate_collection.py  query_collection.py  set_collection.py
src/collection_utils/: evaluate_collection.py  (+2 more)
(+10 files in other folders)
